--- a/XMLEditorModule/XMLEditorModule.csproj
+++ b/XMLEditorModule/XMLEditorModule.csproj
@@ -104,6 +104,9 @@
     <Compile Include="Views\FilterCustomEditor.xaml.cs">
       <DependentUpon>FilterCustomEditor.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\QXAbout.xaml.cs">
+      <DependentUpon>QXAbout.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\TreeEditorsView.xaml.cs">
       <DependentUpon>TreeEditorsView.xaml</DependentUpon>
     </Compile>
@@ -123,6 +126,10 @@
     <Page Include="Views\FilterCustomEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\QXAbout.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\TreeEditorsView.xaml">
       <SubType>Designer</SubType>
