--- a/QX/QXRuntime.csproj
+++ b/QX/QXRuntime.csproj
@@ -168,6 +168,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MonitorMessage.cs" />
     <Compile Include="Exchange.cs" />
     <Compile Include="ExchangeMonitorMessage.cs" />
     <Compile Include="ExchangeMessage.cs" />
