--- a/QX/App.config
+++ b/QX/App.config
@@ -19,6 +19,10 @@
         <assemblyIdentity name="amqmdnsp" publicKeyToken="4ec3909022c7abcc" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.7" newVersion="8.0.0.7" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.web>
