--- a/QX/NLog.config
+++ b/QX/NLog.config
@@ -10,10 +10,18 @@
         concurrentWrites="true"
         keepFileOpen="false"
         encoding="iso-8859-2"/>
+    <target name="statslogfile" xsi:type="File" layout="[${longdate}][${level}]  ${message}" fileName="${basedir}/logs/stats.log"
+    archiveFileName="${basedir}/logs/archives/statslog.{#####}.txt"
+    archiveAboveSize="10485760"
+    archiveNumbering="Sequence"
+    concurrentWrites="true"
+    keepFileOpen="false"
+    encoding="iso-8859-2"/>
     <target name="logconsole" xsi:type="Console" layout="`${longdate}`${level}`${message}" />
   </targets>
 
   <rules>
+    <logger name="ContextStats" minlevel="Trace" writeTo="statslogfile" />
     <logger name="*" minlevel="Trace" writeTo="logconsole" />
     <logger name="*" minlevel="Trace" writeTo="logfile" />
   </rules>
