--- a/QX/packages.config
+++ b/QX/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Confluent.Kafka" version="1.2.2" targetFramework="net452" />
   <package id="librdkafka.redist" version="1.2.2" targetFramework="net452" />
+  <package id="MailKit" version="2.8.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.4.1" targetFramework="net452" />
@@ -13,10 +14,12 @@
   <package id="Microsoft.Owin.Hosting" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.SelfHost" version="2.1.0" targetFramework="net452" />
+  <package id="MimeKit" version="2.9.1" targetFramework="net452" />
   <package id="MQTTnet" version="3.0.11" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="NLog" version="4.6.7" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net452" />
   <package id="RabbitMQ.Client" version="5.1.0" targetFramework="net452" />
   <package id="Saxon-HE" version="9.9.1.4" targetFramework="net45" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net452" />
