--- a/XMLEditorModule/QXConfigShellCore.csproj
+++ b/XMLEditorModule/QXConfigShellCore.csproj
@@ -25,7 +25,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
@@ -70,6 +70,8 @@
       <DependentUpon>FolderNameSelector.xaml</DependentUpon>
     </Compile>
     <Compile Include="GridDefinitions\HTTPIN.cs" />
+    <Compile Include="GridDefinitions\MQTTIN.cs" />
+    <Compile Include="GridDefinitions\FTPOut.cs" />
     <Compile Include="GridDefinitions\SMTPOut.cs" />
     <Compile Include="GridDefinitions\TCPIN.cs" />
     <Compile Include="GridDefinitions\TCPOUT.cs" />
