--- a/QX/packages.config
+++ b/QX/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Confluent.Kafka" version="1.2.2" targetFramework="net452" />
+  <package id="FluentFTP" version="33.0.3" targetFramework="net452" />
   <package id="librdkafka.redist" version="1.2.2" targetFramework="net452" />
   <package id="MailKit" version="2.8.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net452" />
